[project]
name = "real-cugan-createmoviehelper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "idunafu", email = "120173996+idunafu@users.noreply.github.com" }
]
dependencies = [
    "ffmpy>=0.3.2",
    "nuitka>=2.3.11",
    "zstandard>=0.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/real_cugan_createmoviehelper"]
